# MS-AI-MVP

./: .gitignore  README.md  app.py  create_source_files.py  main.py  project_setup_script.sh  pyproject.toml  requirements.txt  run.py  startup.py  startup.sh  streamlit_app.py
components/: navigation.py  settings_modal.py
config/: settings.py
data/conventions/: README.md
docs/: README.md  architecture.md  deploy.md
docs/core/: excel-generator.md  llm-agent.md  pipeline-stages.md
pages/: main_page.py  work_page.py
prompts/: analyze_changes.yaml  determine_strategy.yaml  integration_test.yaml  review_refine.yaml  test_generation.yaml  test_scenarios.yaml
src/ai_test_generator/: __init__.py  cli.py  main.py
src/ai_test_generator/core/: __init__.py  commit_selector.py  git_analyzer.py  llm_agent.py  pipeline_stages.py  rag_system.py  svn_analyzer.py  vcs_models.py
src/ai_test_generator/excel/: __init__.py  excel_generator.py  excel_templates.py  excel_validator.py
src/ai_test_generator/utils/: __init__.py  config.py  logger.py  prompt_loader.py  test_output_formatter.py
tests/: test_commit_selector.py  test_excel_generator.py  test_excel_templates.py  test_excel_validator.py  test_git_analyzer.py  test_integration.py  test_integration_legacy.py.disabled  test_llm_agent.py  test_pipeline_integration.py  test_pipeline_stages.py  test_streamlit_browser.py  test_ui_functionality.py
utils/: azure_client.py
